| Summary: | ASTERISK-30151: Documentation doesn't include info about "field", a 3rd required parameter. | ||||
| Reporter: | Chris Young (chrisyoung72) | Labels: | |||
| Date Opened: | 2022-07-22 10:02:31 | Date Closed: | 2022-08-01 06:56:40 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Functions/func_srv | ||
| Versions: | 18.11.1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Once you know how to use it, the function operates fine but it's generated wiki entry from code is incomplete because it doesn't mention a required parameter "field". It needs something like:
SRVRESULT(id,resultnum,field) where field can be: host, port, priority or weight I came across this using the wiki asterisk version 18 documentation but on quick inspection it is the same in future versions to date. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2022-07-22 10:02:39.343-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-08-01 06:56:42.551-0500 Change 18875 merged by Friendly Automation: func_srv: Document field parameter. [https://gerrit.asterisk.org/c/asterisk/+/18875|https://gerrit.asterisk.org/c/asterisk/+/18875] By: Friendly Automation (friendly-automation) 2022-08-01 06:56:51.905-0500 Change 18873 merged by Friendly Automation: func_srv: Document field parameter. [https://gerrit.asterisk.org/c/asterisk/+/18873|https://gerrit.asterisk.org/c/asterisk/+/18873] By: Friendly Automation (friendly-automation) 2022-08-01 06:59:28.106-0500 Change 18874 merged by Friendly Automation: func_srv: Document field parameter. [https://gerrit.asterisk.org/c/asterisk/+/18874|https://gerrit.asterisk.org/c/asterisk/+/18874] By: Friendly Automation (friendly-automation) 2022-08-01 07:08:53.304-0500 Change 18872 merged by George Joseph: func_srv: Document field parameter. [https://gerrit.asterisk.org/c/asterisk/+/18872|https://gerrit.asterisk.org/c/asterisk/+/18872] By: Friendly Automation (friendly-automation) 2022-08-01 07:09:24.741-0500 Change 18834 merged by George Joseph: func_srv: Document field parameter. [https://gerrit.asterisk.org/c/asterisk/+/18834|https://gerrit.asterisk.org/c/asterisk/+/18834] | ||||